<resources>
    <string name="app_name" translatable="false">Match Point</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="end_game_victory">Victory</string>
    <string name="end_game_faild">Defeat</string>

    <!-- Text button from settings -->
    <string name="button_Info">Match info</string>
    <string name="button_new_macth">New Match</string>
    <string name="button_back_macth">Back to Match</string>
    <string name="button_Statics">Statics</string>
    <string name="button_Theme">Theme</string>
    <string name="button_Help">Help</string>
    <string name="button_About">About</string>
    <string name="button_Exit">Exit</string>
    <string name="button_cancel_match">Cancel Match</string>

    <!-- Text new match -->
    <string name="text_best_sets">Does the best win over 3 or 5 sets?</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_start">Start</string>
    <string name="text_gold_point">Gold point</string>
    <string name="text_who_start">Who starts serving?</string>


    <!-- Text info match -->
    <string name="text_win">Winning = </string>
    <string name="text_service">Service = </string>
    <string name="text_service_side">Service side = </string>
    <string name="text_time_played">Time played = </string>
    <string name="text_you">You</string>
    <string name="text_rival">Rival</string>
    <string name="text_equal">Equal</string>
    <string name="text_left">Left</string>
    <string name="text_right">Right</string>
    <string name="text_win_3_sets">Best 3 sets win</string>
    <string name="text_win_5_sets">Best 5 sets win</string>
    <string name="text_point_wins">Points wins = </string>
    <string name="text_point_lost">Point lost = </string>

    <!-- Text about -->
    <string name="text_version">Version </string>
    <string name="text_resum">This is a program designed for sports use to control the score and statistics of the match and thus prevent the opponent from cheating.</string>
    <string name="text_license">This program is under the MIT license, if you want to consult this license, access the following link.</string>
    <string name="text_report">If you want to report any bug to help improve the program please send an email to migueldemollet10@gmail.com</string>
    <string name="text_source_code">If you want to access the source code of the program, access the following link. https://github.com/migueldemollet/Match-Point</string>
    <string name="text_creator">Created by Miguel del Arco.</string>

    <!-- Text help -->
    <string name="text_green">Pressing the green button increases points in your favor.</string>
    <string name="text_red">Pressing the red button increases points in favor of the rival.</string>
    <string name="text_blue">To consult data or cancel the game, press the marker (it is in blue).</string>
    <string name="text_menu">In the menu you can carry out different actions, such as returning to the game, consulting data about it or canceling it.</string>
    <string name="text_cancel">Pressing the red button cancels the match.</string>

    <!-- Text Result -->
    <string name="text_result">Result</string>
    <string name="text_total_points">Total points = </string>
    <string name="button_back_menu">Back to menu</string>

    <!-- Text Theme -->
    <style name="textThemeChanged">Theme changed successfully</style>

    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_setting" translatable="false">SettingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
</resources>