<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingActivity"
    tools:deviceIds="wear">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/BtnInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_Info" />

        <Button
            android:id="@+id/BtnTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_Theme" />

        <Button
            android:id="@+id/BtnHelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_Help" />

        <Button
            android:id="@+id/BtnAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_About" />

        <Button
            android:id="@+id/BtnExit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_Exit" />

    </LinearLayout>

    </ScrollView>
