<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".setting_option.HelpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="163dp"
            android:src="@drawable/help1" />

        <TextView
            android:id="@+id/textGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="3dp"
            android:text="@string/text_green" />

        <TextView
            android:id="@+id/textRed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="3dp"
            android:text="@string/text_red" />

        <TextView
            android:id="@+id/textBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="3dp"
            android:text="@string/text_blue" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="163dp"
            android:src="@drawable/help2" />

        <TextView
            android:id="@+id/textMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="3dp"
            android:text="@string/text_menu" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="163dp"
            android:src="@drawable/help3" />

        <TextView
            android:id="@+id/textCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="3dp"
            android:text="@string/text_cancel" />
    </LinearLayout>

</ScrollView>